--- a/eth-nft-poc/package.json
+++ b/eth-nft-poc/package.json
@@ -33,5 +33,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "ganache-cli": "^6.12.2"
   }
 }
