--- a/eth-nft-poc/package.json
+++ b/eth-nft-poc/package.json
@@ -37,6 +37,8 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "ganache-cli": "^6.12.2"
+    "ganache-cli": "^6.12.2",
+    "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.2"
   }
 }
