--- a/eth-nft-poc/package.json
+++ b/eth-nft-poc/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test",
-    "prettier": "prettier --write 'contracts/**/*.sol'"
+    "prettier:solidity": "./node_modules/.bin/prettier --write contracts/**/*.sol"
   },
   "lint": "prettier --list-different 'contracts/**/*.sol'",
   "author": "",
