--- a/eth-nft-poc/package.json
+++ b/eth-nft-poc/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@alch/alchemy-web3": "^1.4.6",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
@@ -37,8 +38,8 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "ganache-cli": "^6.12.2",
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "ganache-cli": "^6.12.2"
   }
 }
