--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - main
 
@@ -17,5 +12,15 @@ steps:
 
 - script: |
     npm install
-    npm run build
-  displayName: 'npm install and build'
+  displayName: 'npm install'
+  workingDirectory: eth-nft-poc/
+
+- script: |
+    npx hardhat compile
+  displayName: 'hardhat compile'
+  workingDirectory: eth-nft-poc/
+
+- script: |
+    npx hardhat test
+  displayName: 'hardhat test'
+  workingDirectory: eth-nft-poc/
