--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,31 +6,30 @@ pool:
 
 container: node:18-bullseye-slim@sha256:f32c970581a901560815b9af1aebbc164c86b9be922dda3b9f3b65f653e61776
 
-steps:
-# - task: NodeTool@0
-#   inputs:
-#     versionSpec: '10.x'
-#   displayName: 'Install Node.js'
+variables:
+- name: poc-directory
+  value: eth-nft-poc/
 
+steps:
 - script: |
     npm install
   displayName: 'npm install'
   workingDirectory: eth-nft-poc/
 
 - script: |
-  npm install -g npx
-displayName: 'npx install'
-workingDirectory: eth-nft-poc/
+    npm install -g npx
+  displayName: 'npx install'
+  workingDirectory: eth-nft-poc/
 
 - script: |
-  npx hardhat compile
-displayName: 'npx install'
-workingDirectory: eth-nft-poc/
+    npx hardhat compile
+  displayName: 'npx install'
+  workingDirectory: eth-nft-poc/
 
 - script: |
-  npx hardhat test
-displayName: 'npx install'
-workingDirectory: eth-nft-poc/
+    npx hardhat test
+  displayName: 'npx install'
+  workingDirectory: eth-nft-poc/
 
 # - task: Npm@1
 #   displayName: 'npm custom'
