--- a/eth-nft-poc/package.json
+++ b/eth-nft-poc/package.json
@@ -38,6 +38,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@nomicfoundation/solidity-analyzer": "^0.1.0",
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.2",
     "ganache-cli": "^6.12.2"
