--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ container: node:18-bullseye-slim@sha256:f32c970581a901560815b9af1aebbc164c86b9be
 
 variables:
 - name: poc-directory
-  value: eth-nft-poc
+  value: .
 
 steps:
 - script: |
@@ -25,8 +25,3 @@ steps:
     npx hardhat test
   displayName: 'Test smart contracts'
   workingDirectory: $(poc-directory)
-
-# - task: PublishHtmlReport@1
-#   displayName: 'Publish coverage report'
-#   inputs:
-#     reportDir: '$(poc-directory)/coverage/index.html'
