--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "ethers": "^5.7.1",
+    "ipfs-http-client": "^58.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
