--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,17 +11,34 @@ variables:
   value: .
 
 steps:
+# Set up and run hardhat backend tests
 - script: |
     npm install
-  displayName: 'npm install'
+  displayName: 'Hardhat: Install hardhat dependencies'
   workingDirectory: $(poc-directory)
 
 - script: |
     npx hardhat compile
-  displayName: 'Compile smart contracts'
+  displayName: 'Hardhat: Compile smart contracts'
   workingDirectory: $(poc-directory)
 
 - script: |
     npx hardhat test
-  displayName: 'Test smart contracts'
+  displayName: 'Hardhat: Test smart contracts'
   workingDirectory: $(poc-directory)
+
+# Set up and run e2e tests
+  - script: |
+    nohup npx hardhat node & > hardhat_node.log &
+  displayName: 'Hardhat: run local ethereum node'
+  workingDirectory: $(poc-directory)
+
+  - script: |
+    npx hardhat --network localhost run scripts/deploy_palonft.js
+  displayName: 'Hardhat: Deploy NFT smart contract'
+  workingDirectory: $(poc-directory)
+
+  - script: |
+    npm install
+  displayName: 'Frontend: Install dependencies'
+  workingDirectory: $(poc-directory)/frontend
