--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@nomicfoundation/solidity-analyzer": "^0.1.0",
-    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts": "4.8.0",
     "dotenv": "^16.0.2",
     "ganache-cli": "^6.12.2"
   }
