--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "hardhat": "^2.11.2",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.24",
+    "prettier-plugin-solidity": "^1.0.0",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
