--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fontsource/work-sans": "^4.5.12",
+    "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.6",
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
