--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
 steps:
 # Set up and run hardhat backend tests
 - script: |
-    npm install
+    yarn install
   displayName: 'Hardhat: Install hardhat dependencies'
   workingDirectory: $(poc-directory)
 
@@ -31,7 +31,7 @@ steps:
 # Set up and run e2e tests
 
 - script: |
-    npm install
+    yarn install
   displayName: 'Frontend: Install dependencies'
   workingDirectory: $(poc-directory)/frontend
 
