--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomicfoundation/solidity-analyzer-linux-x64-gnu": "^0.1.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
@@ -39,9 +38,11 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@nomicfoundation/solidity-analyzer": "^0.1.0",
     "@openzeppelin/contracts": "4.8.0",
     "dotenv": "^16.0.2",
     "ganache-cli": "^6.12.2"
+  },
+  "optionalDependencies": {
+    "@nomicfoundation/solidity-analyzer": "github:nomicfoundation/solidity-analyzer"
   }
 }
