--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,10 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-
+  
+variables:
+  imageName: 'synpress-main'
+  DOCKER_BUILDKIT: 1
 
 steps:
 - task: NodeTool@0
@@ -23,7 +26,7 @@ steps:
 
 - script: |
     yarn install
-  displayName: 'Frontend: yarbn install'
+  displayName: 'Frontend: yarn install'
   workingDirectory: $(Build.SourcesDirectory)/frontend
 
 # Cache hardhat node modules
@@ -49,6 +52,13 @@ steps:
     npx hardhat test
   displayName: 'Hardhat: Test smart contracts'
   workingDirectory: $(Build.SourcesDirectory)
+
+- task: Docker@2
+  displayName: Build an image
+  inputs:
+    repository: $(imageName)
+    command: build
+    Dockerfile: frontend/Dockerfile
 
 
 # container: node:18-bullseye-slim@sha256:f32c970581a901560815b9af1aebbc164c86b9be922dda3b9f3b65f653e61776
