--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       bash -c 'echo -n "======> local noVNC URL:
       http://localhost:8080/vnc.html?autoconnect=true " && npx wait-on
       http://display:8080 && echo -n "======> remote noVNC URL: " && curl -s
-      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && npx hardhat node &&
-      npx hardhat --network localhost run scripts/deploy_palonft.js &&
+      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && nohup npx hardhat node & > hardhat_node.log & &&
+      nohup npx hardhat --network localhost run scripts/deploy_palonft.js &&
       npm i -g ipfs'
     networks:
       - x11
