Add script to run e2e tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,17 +58,20 @@ steps:
   workingDirectory: $(Build.SourcesDirectory)
 
 - task: Docker@2
-  displayName: Build an image
+  displayName: 'E2E: Build docker image'
   inputs:
     repository: $(imageName)
     command: build
     Dockerfile: frontend/Dockerfile
 
 - task: DockerCompose@0
+  displayName: 'E2E: Execute e2e tests'
   inputs:
     action: 'Run services'
     containerregistrytype: 'Azure Container Registry'
     dockerComposeFile: 'docker-compose.yml'
+    dockerComposeFileArgs: |
+      DEBUG=true
     buildImages: true
     abortOnContainerExit: true
     detached: false
