--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       - DISPLAY=display:0.0
       - CYPRESS_PRIVATE_KEY_WITH_FUNDS=${CYPRESS_PRIVATE_KEY_WITH_FUNDS}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
-      - DEBUG=true${DEBUG}
+      - DEBUG=true
       - CYPRESS_DOCKER_RUN=true
+      - NETWORK_NAME=localhost
+      - METAMASK_VERSION=latest
     depends_on:
       - display
       - video
@@ -22,7 +24,7 @@ services:
       bash -c 'echo -n "======> local noVNC URL:
       http://localhost:8080/vnc.html?autoconnect=true " && npx wait-on
       http://display:8080 && echo -n "======> remote noVNC URL: " && curl -s
-      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && ./scripts/run_e2e_tests.sh'
+      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && ls -la && cd frontend && synpress run -cf cypress.config.ts'
     networks:
       - x11
 
