--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,9 @@ services:
       bash -c 'echo -n "======> local noVNC URL:
       http://localhost:8080/vnc.html?autoconnect=true " && npx wait-on
       http://display:8080 && echo -n "======> remote noVNC URL: " && curl -s
-      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && ls -la && cd frontend && synpress run -cf cypress.config.ts'
+      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && ls -la &&
+      npx hardhat --network localhost run scripts/deploy_palonft.js &&
+      cd frontend && synpress run -cf cypress.config.ts'
     networks:
       - x11
 
