--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     build: .
     environment:
       - DISPLAY=display:0.0
-      - CYPRESS_PRIVATE_KEY_WITH_FUNDS=${CYPRESS_PRIVATE_KEY_WITH_FUNDS}
-      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      # - CYPRESS_PRIVATE_KEY_WITH_FUNDS=${CYPRESS_PRIVATE_KEY_WITH_FUNDS}
+      # - GITHUB_TOKEN=${GITHUB_TOKEN}
       - DEBUG=true
       - CYPRESS_DOCKER_RUN=true
       - NETWORK_NAME=localhost
