--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,18 +39,18 @@ services:
     networks:
       - x11
 
-  ngrok:
-    profiles:
-      - ngrok
-    container_name: ngrok
-    image: synthetixio/ngrok:457bb48776c3b14de232d9dda620ba9188dc40ac-base
-    ports:
-      - '4040:4040'
-    command: ['ngrok', 'http', 'display:8080', '--authtoken', '${NGROK_AUTH}']
-    depends_on:
-      - display
-    networks:
-      - x11
+  # ngrok:
+  #   profiles:
+  #     - ngrok
+  #   container_name: ngrok
+  #   image: synthetixio/ngrok:457bb48776c3b14de232d9dda620ba9188dc40ac-base
+  #   ports:
+  #     - '4040:4040'
+  #   command: ['ngrok', 'http', 'display:8080', '--authtoken', '${NGROK_AUTH}']
+  #   depends_on:
+  #     - display
+  #   networks:
+  #     - x11
 
   video:
     container_name: video
@@ -64,18 +64,18 @@ services:
     networks:
       - x11
 
-  foundry:
-    profiles:
-      - foundry
-    container_name: foundry
-    image: synthetixio/foundry:457bb48776c3b14de232d9dda620ba9188dc40ac-base
-    command: ['anvil --no-cors --fork-url ${ANVIL_FORK_URL}']
-    environment:
-      - ANVIL_IP_ADDR=0.0.0.0
-    ports:
-      - '8545:8545'
-    networks:
-      - x11
+  # foundry:
+  #   profiles:
+  #     - foundry
+  #   container_name: foundry
+  #   image: synthetixio/foundry:457bb48776c3b14de232d9dda620ba9188dc40ac-base
+  #   command: ['anvil --no-cors --fork-url ${ANVIL_FORK_URL}']
+  #   environment:
+  #     - ANVIL_IP_ADDR=0.0.0.0
+  #   ports:
+  #     - '8545:8545'
+  #   networks:
+  #     - x11
 
 networks:
   x11:
