--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "synpress run -cf cypress.config.ts",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-and-test": "start-server-and-test start http://127.0.0.1:3000 test"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +46,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^13.0.3",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
     "@synthetixio/synpress": "^2.4.1",
-    "cypress": "^10.10.0"
+    "cypress": "^10.10.0",
+    "wait-on": "^6.0.1"
   }
 }
