--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "FORCE_COLOR=true react-scripts start | cat -",
     "build": "react-scripts build",
     "test": "synpress run -cf cypress.config.ts",
     "eject": "react-scripts eject",
