--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   synpress:
@@ -6,77 +6,52 @@ services:
     build: .
     environment:
       - DISPLAY=display:0.0
-      - CYPRESS_PRIVATE_KEY_WITH_FUNDS=0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
-      - PRIVATE_KEY=0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
+      # - PRIVATE_KEY=${PRIVATE_KEY}
       # - GITHUB_TOKEN=${GITHUB_TOKEN}
       - DEBUG=true
-      - CYPRESS_DOCKER_RUN=true
-      - NETWORK_NAME=localhost
-      - METAMASK_VERSION=latest
+      # - GH_PAT=${GH_PAT}
+      # - GH_USERNAME=${GH_USERNAME}
     depends_on:
       - display
-      - video
     entrypoint: []
     working_dir: /app
-    volumes:
-      - ./docker/videos:/app/tests/e2e/videos
-      - ./docker/screenshots:/app/tests/e2e/screenshots
     command: >
       bash -c 'echo -n "======> local noVNC URL:
       http://localhost:8080/vnc.html?autoconnect=true " && npx wait-on
-      http://display:8080 && echo -n "======> remote noVNC URL: " && curl -s
-      ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && ls -la &&
-      cd scripts && ./run_e2e_tests.sh'
+      http://display:8080 && cd ./scripts && ./run_e2e_tests.sh'
     networks:
       - x11
+    volumes:
+      - ./docker/videos:/app/tests/e2e/videos
+      - ./docker/screenshots:/app/tests/e2e/screenshots
 
   display:
     container_name: display
-    image: synthetixio/display:457bb48776c3b14de232d9dda620ba9188dc40ac-base
+    image: synthetixio/display:b2643097e891906524e52e7ee956260b20fa01fb-base
     environment:
       - RUN_XTERM=no
+      - DISPLAY_WIDTH=${DISPLAY_WIDTH}
+      - DISPLAY_HEIGHT=${DISPLAY_HEIGHT}
     ports:
-      - '8080:8080'
+      - "8080:8080"
     networks:
       - x11
 
-  # ngrok:
-  #   profiles:
-  #     - ngrok
-  #   container_name: ngrok
-  #   image: synthetixio/ngrok:457bb48776c3b14de232d9dda620ba9188dc40ac-base
-  #   ports:
-  #     - '4040:4040'
-  #   command: ['ngrok', 'http', 'display:8080', '--authtoken', '${NGROK_AUTH}']
-  #   depends_on:
-  #     - display
-  #   networks:
-  #     - x11
-
   video:
+    profiles:
+      - synpress
     container_name: video
     image: synthetixio/video:457bb48776c3b14de232d9dda620ba9188dc40ac-base
     volumes:
       - ./docker/videos-ci:/videos
     environment:
       - FILE_NAME=CI-full-video.mp4
+      - SE_SCREEN_WIDTH=${SE_SCREEN_WIDTH}
+      - SE_SCREEN_HEIGHT=${SE_SCREEN_HEIGHT}
     depends_on:
       - display
     networks:
       - x11
-
-  # foundry:
-  #   profiles:
-  #     - foundry
-  #   container_name: foundry
-  #   image: synthetixio/foundry:457bb48776c3b14de232d9dda620ba9188dc40ac-base
-  #   command: ['anvil --no-cors --fork-url ${ANVIL_FORK_URL}']
-  #   environment:
-  #     - ANVIL_IP_ADDR=0.0.0.0
-  #   ports:
-  #     - '8545:8545'
-  #   networks:
-  #     - x11
 
 networks:
   x11:
