--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,3 +77,12 @@ steps:
       DISPLAY_WIDTH: 1366
       SE_SCREEN_WIDTH: 1366
       SE_SCREEN_HEIGHT: 768
+
+  - publish: $(System.DefaultWorkingDirectory)/docker/screenshots
+    artifact: screenshots
+
+  - publish: $(System.DefaultWorkingDirectory)/docker/videos
+    artifact: videos
+
+  - publish: $(System.DefaultWorkingDirectory)/docker/videos-ci
+    artifact: videos-ci
