--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
   - task: Cache@2
     displayName: "Cache: Hardhat node modules"
     inputs:
-      key: 'yarn | "$(Agent.OS)" | hardhat | $(Build.SourcesDirectory)/yarn.lock'
+      key: 'yarn | "$(Agent.OS)" | hardhat | $(Build.SourcesDirectory)/backend/yarn.lock'
       path: $(System.DefaultWorkingDirectory)/backend/node_modules
       cacheHitVar: HARDHAT_CACHE_RESTORED
 
