--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,6 @@ artifacts
 nohup.out
 
 e2e/docker/screenshots/*
+!e2e/docker/screenshots/.gitkeep
 e2e/docker/videos/*
+!e2e/docker/videos/.gitkeep
