update tsconfig for e2e tests

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,23 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
-    "baseUrl": "./"
+    "moduleResolution": "node"
   },
-  "include": ["cypress"]
+  "include": ["/**/*.ts"],
+  "exclude": ["node_modules"]
 }
