--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "test:local": "env-cmd -f ./env/.env.local npx synpress run -cf synpress.config.js",
+    "test:local": "env-cmd -f ./env/.env.local npx synpress run -cf synpress.config.ts",
     "test:testnet": ""
   },
   "devDependencies": {
