remove type:module from package.json due to conflict with default in tsconfig.josn

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ e2e/docker/screenshots/*
 !e2e/docker/screenshots/.gitkeep
 e2e/docker/videos/*
 !e2e/docker/videos/.gitkeep
+
+e2e/cypress/videos/*
